# bowie_api_rest

./: .buildinfo  .gitignore  .pre-commit-config.yaml  CHANGELOG.html  CHANGELOG.md  Dockerfile  LICENSE  README.html  README.md  bowie_api_rest.html  changelog.html  genindex.html  index.html  modules.html  objects.inv  purpose.html  py-modindex.html  pyproject.toml  readme.html  search.html  searchindex.js  usage.html
.doctrees/: CHANGELOG.doctree  README.doctree  bowie_api_rest.doctree  changelog.doctree  environment.pickle  index.doctree  modules.doctree  purpose.doctree  readme.doctree  usage.doctree
.github/workflows/: .github-ci.yml
_sources/: CHANGELOG.md.txt  README.md.txt  bowie_api_rest.rst.txt  index.rst.txt
docs/source/: conf.py  index.rst  modules.rst  purpose.rst
scripts/: build_db.py  inspect_tracks.py
src/bowie_api_rest/: __init__.py  config.py  crud.py  database.py  main.py  models.py  routes.py  schemas.py  schemas_base.py
src/bowie_api_rest/db/: bowie_discography.db  bowie_discography.json
tests/: test_main.py
